sample of section-adapter is done

--- a/samples/src/main/res/layout/item_body_second.xml
+++ b/samples/src/main/res/layout/item_body_second.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="55dp">
     <TextView
         android:id="@+id/body_second_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:textStyle="bold|italic"
+        android:textSize="17dp"
         android:text="body_second"/>
-</LinearLayout>
+</FrameLayout>
