--- a/samples/src/main/res/layout/item_header.xml
+++ b/samples/src/main/res/layout/item_header.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="45dp"
+    android:background="@color/colorPrimary">
 
     <TextView
+        android:id="@+id/header_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        android:textColor="@android:color/white"
+        android:textSize="20dp"
         android:text="header"/>
 
-</LinearLayout>
+</FrameLayout>
