--- a/samples/src/main/res/layout/activity_listview.xml
+++ b/samples/src/main/res/layout/activity_listview.xml
@@ -2,6 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <Button
+        android:id="@+id/test_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
